♻️#12: profileImageOrNull() 리팩토링
- null-safe를 보장하고 공백 문자열까지 필터링하도록 수정